@@ -15,7 +15,6 @@
  */
 package com.vaadin.flow.component.grid.contextmenu;
 
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.vaadin.flow.component.grid.Grid;
@@ -50,8 +49,7 @@ public class ContextMenuGridPage extends Div {
         grid.addColumn(Person::getFirstName).setHeader("Name").setId("Name-Id");
         grid.addColumn(Person::getAge).setHeader("Born").setId("Born-Id");
         grid.setItems(IntStream.range(0, 77)
-                .mapToObj(i -> new Person("Person " + i, 1900 + i))
-                .collect(Collectors.toList()));
+                .mapToObj(i -> new Person("Person " + i, 1900 + i)).toList());
 
         GridContextMenu<Person> contextMenu = grid.addContextMenu();
         addItems(contextMenu);
@@ -94,8 +92,8 @@ public class ContextMenuGridPage extends Div {
         GridInATemplate template = new GridInATemplate();
         Grid<String> gridInATemplate = template.getGrid();
         gridInATemplate.addColumn(s -> s).setHeader("Item");
-        gridInATemplate.setItems(IntStream.range(0, 26)
-                .mapToObj(i -> "Item " + i).collect(Collectors.toList()));
+        gridInATemplate.setItems(
+                IntStream.range(0, 26).mapToObj(i -> "Item " + i).toList());
 
         GridContextMenu<String> contextMenu = gridInATemplate.addContextMenu();
         contextMenu.addItem("Show name of context menu target item",
